--- a/06 Apps/Assignment02.BlazorWebApp/Assignment02.BlazorWebApp.csproj
+++ b/06 Apps/Assignment02.BlazorWebApp/Assignment02.BlazorWebApp.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Blazored.SessionStorage" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Fast.Components.FluentUI" Version="2.4.1" />
+		<PackageReference Include="Microsoft.Fast.Components.FluentUI.DataGrid.EntityFrameworkAdapter" Version="2.1.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\04 Codes\05 HttpClient Providers\Assignment02.HttpClientProviders\Assignment02.HttpClientProviders.csproj" />
+	</ItemGroup>
 </Project>
