--- a/02 Libraries/Assignment02.SharedLibrary.BaseEntityWebApiProvider/Assignment02.SharedLibrary.BaseEntityWebApiProvider.csproj
+++ b/02 Libraries/Assignment02.SharedLibrary.BaseEntityWebApiProvider/Assignment02.SharedLibrary.BaseEntityWebApiProvider.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Assignment02.SharedLibrary.BaseEntityLogicProviders\Assignment02.SharedLibrary.BaseEntityLogicProvider.csproj" />
