--- a/04 Codes/05 HttpClient Providers/Assignment02.HttpClientProviders/Assignment02.HttpClientProviders.csproj
+++ b/04 Codes/05 HttpClient Providers/Assignment02.HttpClientProviders/Assignment02.HttpClientProviders.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="IHttpClientProviders\" />
+    <Folder Include="HttpClientProviders\" />
+    <Folder Include="HttpClientContext\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\02 Libraries\Assignment02.SharedLibrary.BaseEntityHttpClientProvider\Assignment02.SharedLibrary.BaseEntityHttpClientProvider.csproj" />
+  </ItemGroup>
+
 </Project>
