--- a/05 Hosts/Assignment02.WebApiHost/Assignment02.WebApiHost.csproj
+++ b/05 Hosts/Assignment02.WebApiHost/Assignment02.WebApiHost.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\..\04 Codes\04 WebApi Providers\Assignment02.WebApiProviders\Assignment02.WebApiProviders.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
