--- a/06 Apps/Assignment02.BlazorWebApp/appsettings.json
+++ b/06 Apps/Assignment02.BlazorWebApp/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "BaseUrl": "http://localhost:3831",
+  //"https://localhost:7070;http://localhost:5059"
   "Logging": {
     "LogLevel": {
       "Default": "Information",
