--- a/06 Apps/Assignment02.BlazorWebApp/appsettings.json
+++ b/06 Apps/Assignment02.BlazorWebApp/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "BaseUrl": "http://localhost:3831",
+  "BaseUrl": "https://localhost:7070",
   //"https://localhost:7070;http://localhost:5059"
   "Logging": {
     "LogLevel": {
