added demo data

--- a/06 Apps/Assignment02.BlazorWebApp/Assignment02.BlazorWebApp.csproj
+++ b/06 Apps/Assignment02.BlazorWebApp/Assignment02.BlazorWebApp.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Blazored.SessionStorage" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Fast.Components.FluentUI" Version="2.4.1" />
+		<PackageReference Include="Syncfusion.Blazor" Version="22.2.5" />
 		<PackageReference Include="Microsoft.Fast.Components.FluentUI.DataGrid.EntityFrameworkAdapter" Version="2.1.4" />
 	</ItemGroup>
 
