--- a/05 Hosts/Assignment02.WebApiHost/appsettings.json
+++ b/05 Hosts/Assignment02.WebApiHost/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IDL-LT-193;Database=EbookStore;User Id=sa;Password=123456@Aa;TrustServerCertificate=True"
+    "DefaultConnection": "Server=IDL-LT-193;Database=ass02;User Id=sa;Password=123456@Aa;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
